# urlcat-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs
src/utils/: join_paths.rs  mod.rs
tests/: main.rs
