[package]
name = "urlcat"
version = "0.1.5"
edition = "2021"
authors = ["Tronikel <contactdonatas@gmail.com>"]
license = "GPL-3.0-or-later"
description = "a simple tool to help easily generate dynamic urls with proper encoding"
repository = "https://github.com/Tronikelis/urlcat-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urlencoding = "2.1.2"
